sigar-sys/src/ffi.rs

#[test]
fn bindgen_test_layout_sigar_proc_cumulative_disk_io_t() {
    assert_eq!(
        ::std::mem::size_of::<sigar_proc_cumulative_disk_io_t>(),
        24usize,
        concat!("Size of: ", stringify!(sigar_proc_cumulative_disk_io_t))
    );
    assert_eq!(
        ::std::mem::align_of::<sigar_proc_cumulative_disk_io_t>(),
        8usize,
        concat!("Alignment of ", stringify!(sigar_proc_cumulative_disk_io_t))
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<sigar_proc_cumulative_disk_io_t>())).bytes_read as *const _
                as usize
        },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(sigar_proc_cumulative_disk_io_t),
            "::",
            stringify!(bytes_read)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<sigar_proc_cumulative_disk_io_t>())).bytes_written as *const _
                as usize
        },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(sigar_proc_cumulative_disk_io_t),
            "::",
            stringify!(bytes_written)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<sigar_proc_cumulative_disk_io_t>())).bytes_total as *const _
                as usize
        },
        16usize,
        concat!(
            "Offset of field: ",
            stringify!(sigar_proc_cumulative_disk_io_t),
            "::",
            stringify!(bytes_total)
        )
    );
}
extern "C" {
    pub fn sigar_proc_cumulative_disk_io_get(
        sigar: *mut sigar_t,
        pid: sigar_pid_t,
        proc_cumulative_disk_io: *mut sigar_proc_cumulative_disk_io_t,
    ) -> ::std::os::raw::c_int;
}
#[repr(C)]
#[derive(Debug, Default, Copy, Clone)]
pub struct sigar_dump_pid_cache_t {
    pub dummy: sigar_uint64_t,
}
#[test]
fn bindgen_test_layout_sigar_dump_pid_cache_t() {
    assert_eq!(
        ::std::mem::size_of::<sigar_dump_pid_cache_t>(),
        8usize,
        concat!("Size of: ", stringify!(sigar_dump_pid_cache_t))
    );
    assert_eq!(
        ::std::mem::align_of::<sigar_dump_pid_cache_t>(),
        8usize,
        concat!("Alignment of ", stringify!(sigar_dump_pid_cache_t))
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<sigar_dump_pid_cache_t>())).dummy as *const _ as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(sigar_dump_pid_cache_t),
            "::",
            stringify!(dummy)
        )
    );
}
extern "C" {
    pub fn sigar_dump_pid_cache_get(
        sigar: *mut sigar_t,
        info: *mut sigar_dump_pid_cache_t,
    ) -> ::std::os::raw::c_int;
}
#[repr(C)]
#[derive(Debug, Default, Copy, Clone)]
pub struct sigar_proc_cred_t {
    pub uid: sigar_uid_t,
    pub gid: sigar_gid_t,
    pub euid: sigar_uid_t,
    pub egid: sigar_gid_t,
}
#[test]
fn bindgen_test_layout_sigar_proc_cred_t() {
    assert_eq!(
        ::std::mem::size_of::<sigar_proc_cred_t>(),
        16usize,
        concat!("Size of: ", stringify!(sigar_proc_cred_t))
    );
    assert_eq!(
        ::std::mem::align_of::<sigar_proc_cred_t>(),
        4usize,
        concat!("Alignment of ", stringify!(sigar_proc_cred_t))
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<sigar_proc_cred_t>())).uid as *const _ as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(sigar_proc_cred_t),
            "::",
            stringify!(uid)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<sigar_proc_cred_t>())).gid as *const _ as usize },
        4usize,
        concat!(
            "Offset of field: ",
            stringify!(sigar_proc_cred_t),
            "::",
            stringify!(gid)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<sigar_proc_cred_t>())).euid as *const _ as usize },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(sigar_proc_cred_t),
            "::",
            stringify!(euid)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<sigar_proc_cred_t>())).egid as *const _ as usize },
        12usize,
        concat!(
            "Offset of field: ",
            stringify!(sigar_proc_cred_t),
            "::",
            stringify!(egid)
        )
    );
}
extern "C" {
    pub fn sigar_proc_cred_get(
        sigar: *mut sigar_t,
        pid: sigar_pid_t,
        proccred: *mut sigar_proc_cred_t,
    ) -> ::std::os::raw::c_int;
}
#[repr(C)]
#[derive(Copy, Clone)]
pub struct sigar_proc_cred_name_t {
    pub user: [::std::os::raw::c_char; 512usize],
    pub group: [::std::os::raw::c_char; 512usize],
}
#[test]
fn bindgen_test_layout_sigar_proc_cred_name_t() {
    assert_eq!(
        ::std::mem::size_of::<sigar_proc_cred_name_t>(),
        1024usize,
        concat!("Size of: ", stringify!(sigar_proc_cred_name_t))
    );
    assert_eq!(
        ::std::mem::align_of::<sigar_proc_cred_name_t>(),
        1usize,
        concat!("Alignment of ", stringify!(sigar_proc_cred_name_t))
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<sigar_proc_cred_name_t>())).user as *const _ as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(sigar_proc_cred_name_t),
            "::",
            stringify!(user)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<sigar_proc_cred_name_t>())).group as *const _ as usize },
        512usize,
        concat!(
            "Offset of field: ",
            stringify!(sigar_proc_cred_name_t),
            "::",
            stringify!(group)
        )
    );
}
impl Default for sigar_proc_cred_name_t {
    fn default() -> Self {
        unsafe { ::std::mem::zeroed() }
    }
}
extern "C" {
    pub fn sigar_proc_cred_name_get(
        sigar: *mut sigar_t,
        pid: sigar_pid_t,
        proccredname: *mut sigar_proc_cred_name_t,
    ) -> ::std::os::raw::c_int;
}
#[repr(C)]
#[derive(Debug, Default, Copy, Clone)]
pub struct sigar_proc_time_t {
    pub start_time: sigar_uint64_t,
    pub user: sigar_uint64_t,
    pub sys: sigar_uint64_t,
    pub total: sigar_uint64_t,
}
#[test]
fn bindgen_test_layout_sigar_proc_time_t() {
    assert_eq!(
        ::std::mem::size_of::<sigar_proc_time_t>(),
        32usize,
        concat!("Size of: ", stringify!(sigar_proc_time_t))
    );
    assert_eq!(
        ::std::mem::align_of::<sigar_proc_time_t>(),
        8usize,
        concat!("Alignment of ", stringify!(sigar_proc_time_t))
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<sigar_proc_time_t>())).start_time as *const _ as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(sigar_proc_time_t),
            "::",
            stringify!(start_time)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<sigar_proc_time_t>())).user as *const _ as usize },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(sigar_proc_time_t),
            "::",
            stringify!(user)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<sigar_proc_time_t>())).sys as *const _ as usize },
        16usize,
        concat!(
            "Offset of field: ",
            stringify!(sigar_proc_time_t),
            "::",
            stringify!(sys)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<sigar_proc_time_t>())).total as *const _ as usize },
        24usize,
        concat!(
            "Offset of field: ",
            stringify!(sigar_proc_time_t),
            "::",
            stringify!(total)
        )
    );
}
extern "C" {
    pub fn sigar_proc_time_get(
        sigar: *mut sigar_t,
        pid: sigar_pid_t,
        proctime: *mut sigar_proc_time_t,
    ) -> ::std::os::raw::c_int;
}
#[repr(C)]
#[derive(Debug, Default, Copy, Clone)]
pub struct sigar_proc_cpu_t {
    pub start_time: sigar_uint64_t,
    pub user: sigar_uint64_t,
    pub sys: sigar_uint64_t,
    pub total: sigar_uint64_t,
    pub last_time: sigar_uint64_t,
    pub percent: f64,
}
#[test]
fn bindgen_test_layout_sigar_proc_cpu_t() {
    assert_eq!(
        ::std::mem::size_of::<sigar_proc_cpu_t>(),
        48usize,
        concat!("Size of: ", stringify!(sigar_proc_cpu_t))
    );
    assert_eq!(
        ::std::mem::align_of::<sigar_proc_cpu_t>(),
        8usize,
        concat!("Alignment of ", stringify!(sigar_proc_cpu_t))
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<sigar_proc_cpu_t>())).start_time as *const _ as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(sigar_proc_cpu_t),
            "::",
            stringify!(start_time)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<sigar_proc_cpu_t>())).user as *const _ as usize },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(sigar_proc_cpu_t),
            "::",
            stringify!(user)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<sigar_proc_cpu_t>())).sys as *const _ as usize },
        16usize,
        concat!(
            "Offset of field: ",
            stringify!(sigar_proc_cpu_t),
            "::",
            stringify!(sys)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<sigar_proc_cpu_t>())).total as *const _ as usize },
        24usize,
        concat!(
            "Offset of field: ",
            stringify!(sigar_proc_cpu_t),
            "::",
            stringify!(total)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<sigar_proc_cpu_t>())).last_time as *const _ as usize },
        32usize,
        concat!(
            "Offset of field: ",
            stringify!(sigar_proc_cpu_t),
            "::",
            stringify!(last_time)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<sigar_proc_cpu_t>())).percent as *const _ as usize },
        40usize,
        concat!(
            "Offset of field: ",
            stringify!(sigar_proc_cpu_t),
            "::",
            stringify!(percent)
        )
    );
}
extern "C" {
    pub fn sigar_proc_cpu_get(
        sigar: *mut sigar_t,
        pid: sigar_pid_t,
        proccpu: *mut sigar_proc_cpu_t,
    ) -> ::std::os::raw::c_int;
}
#[repr(C)]
#[derive(Copy, Clone)]
pub struct sigar_proc_state_t {
    pub name: [::std::os::raw::c_char; 128usize],
    pub state: ::std::os::raw::c_char,
    pub ppid: sigar_pid_t,
    pub tty: ::std::os::raw::c_int,
    pub priority: ::std::os::raw::c_int,
    pub nice: ::std::os::raw::c_int,
    pub processor: ::std::os::raw::c_int,
    pub threads: sigar_uint64_t,
}
